Add DATE and update other conferences to latest.

--- a/gen-abbrev.bib
+++ b/gen-abbrev.bib
@@ -160,6 +160,8 @@
 @string{asplos15 = "Proceedings of the 20th International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS-XX)"}
 @string{asplos16 = "Proceedings of the 21st International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS-XXI)"}
 @string{asplos17 = "Proceedings of the 22nd International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS-XXII)"}
+@string{asplos18 = "Proceedings of the 23rd International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS-XXIII)"}
+@string{asplos19 = "Proceedings of the 24th International Conference on Architectural Support for Programming Languages and Operating Systems (ASPLOS-XXIV)"}
 @string{hotos97 = "Proceedings of The 6th Workshop on Hot Topics in Operating Systems (HotOS-VI)"}
 @string{hotos99 = "Proceedings of The 7th Workshop on Hot Topics in Operating Systems (HotOS-VII)"}
 @string{hotos01 = "Proceedings of The 8th Workshop on Hot Topics in Operating Systems (HotOS-VIII)"}
@@ -351,6 +353,8 @@
 @string{hpca14 = "Proceedings of the 20th IEEE Symposium on High-Performance Computer Architecture (HPCA)"}
 @string{hpca15 = "Proceedings of the 21st IEEE Symposium on High-Performance Computer Architecture (HPCA)"}
 @string{hpca16 = "Proceedings of the 22nd IEEE Symposium on High-Performance Computer Architecture (HPCA)"}
+@string{hpca17 = "Proceedings of the 23rd IEEE Symposium on High-Performance Computer Architecture (HPCA)"}
+@string{hpca18 = "Proceedings of the 24th IEEE Symposium on High-Performance Computer Architecture (HPCA)"}
 @string{micro68 = "Proceedings of the 1st Annual IEEE/ACM International Symposium on Microarchitecture (MICRO)"}
 @string{micro69 = "Proceedings of the 2nd Annual IEEE/ACM International Symposium on Microarchitecture (MICRO)"}
 @string{micro70 = "Proceedings of the 3rd Annual IEEE/ACM International Symposium on Microarchitecture (MICRO)"}
@@ -400,6 +404,8 @@
 @string{micro14 = "Proceedings of the 47th Annual IEEE/ACM International Symposium on Microarchitecture (MICRO)"}
 @string{micro15 = "Proceedings of the 48th Annual IEEE/ACM International Symposium on Microarchitecture (MICRO)"}
 @string{micro16 = "Proceedings of the 49th Annual IEEE/ACM International Symposium on Microarchitecture (MICRO)"}
+@string{micro17 = "Proceedings of the 50th Annual IEEE/ACM International Symposium on Microarchitecture (MICRO)"}
+@string{micro18 = "Proceedings of the 51st Annual IEEE/ACM International Symposium on Microarchitecture (MICRO)"}
 @string{uss98 = "Proceedings of the 7th USENIX Security Symposium"}
 @string{uss99 = "Proceedings of the 8th USENIX Security Symposium"}
 @string{uss00 = "Proceedings of the 9th USENIX Security Symposium"}
@@ -1107,6 +1113,13 @@
 @string{memsys17 = "Proceedings of the 2017 International Symposium on Memory Systems (MEMSYS)"}
 @string{memsys18 = "Proceedings of the 2018 International Symposium on Memory Systems (MEMSYS)"}
 @string{memsys19 = "Proceedings of the 2019 International Symposium on Memory Systems (MEMSYS)"}
+@string{date12 = "Proceedings of the 2012 Design, Automation, and Test in Europe Conference and Exhibition (DATE)"}
+@string{date13 = "Proceedings of the 2013 Design, Automation, and Test in Europe Conference and Exhibition (DATE)"}
+@string{date14 = "Proceedings of the 2014 Design, Automation, and Test in Europe Conference and Exhibition (DATE)"}
+@string{date15 = "Proceedings of the 2015 Design, Automation, and Test in Europe Conference and Exhibition (DATE)"}
+@string{date16 = "Proceedings of the 2016 Design, Automation, and Test in Europe Conference and Exhibition (DATE)"}
+@string{date17 = "Proceedings of the 2017 Design, Automation, and Test in Europe Conference and Exhibition (DATE)"}
+@string{date18 = "Proceedings of the 2018 Design, Automation, and Test in Europe Conference and Exhibition (DATE)"}
 @string{iwmm92 = "Proceedings of the 1992 International Workshop on Memory Management (IWMM)"}
 @string{iwmm93 = "Proceedings of the 1993 International Workshop on Memory Management (IWMM)"}
 @string{iwmm94 = "Proceedings of the 1994 International Workshop on Memory Management (IWMM)"}
