--- a/gen-abbrev.bib
+++ b/gen-abbrev.bib
@@ -467,6 +467,27 @@
 @string{micro17 = "Proceedings of the 50th Annual IEEE/ACM International Symposium on Microarchitecture (MICRO)"}
 @string{micro18 = "Proceedings of the 51st Annual IEEE/ACM International Symposium on Microarchitecture (MICRO)"}
 @string{micro19 = "Proceedings of the 52nd Annual IEEE/ACM International Symposium on Microarchitecture (MICRO)"}
+@string{uss98 = "Proceedings of the 7th USENIX Security Symposium"}
+@string{uss99 = "Proceedings of the 8th USENIX Security Symposium"}
+@string{uss00 = "Proceedings of the 9th USENIX Security Symposium"}
+@string{uss01 = "Proceedings of the 10th USENIX Security Symposium"}
+@string{uss02 = "Proceedings of the 11th USENIX Security Symposium"}
+@string{uss03 = "Proceedings of the 12th USENIX Security Symposium"}
+@string{uss04 = "Proceedings of the 13th USENIX Security Symposium"}
+@string{uss05 = "Proceedings of the 14th USENIX Security Symposium"}
+@string{uss06 = "Proceedings of the 15th USENIX Security Symposium"}
+@string{uss07 = "Proceedings of the 16th USENIX Security Symposium"}
+@string{uss08 = "Proceedings of the 17th USENIX Security Symposium"}
+@string{uss09 = "Proceedings of the 18th USENIX Security Symposium"}
+@string{uss10 = "Proceedings of the 19th USENIX Security Symposium"}
+@string{uss11 = "Proceedings of the 20th USENIX Security Symposium"}
+@string{uss12 = "Proceedings of the 21st USENIX Security Symposium"}
+@string{uss13 = "Proceedings of the 22nd USENIX Security Symposium"}
+@string{uss14 = "Proceedings of the 23rd USENIX Security Symposium"}
+@string{uss15 = "Proceedings of the 24th USENIX Security Symposium"}
+@string{uss16 = "Proceedings of the 25th USENIX Security Symposium"}
+@string{uss17 = "Proceedings of the 26th USENIX Security Symposium"}
+@string{uss18 = "Proceedings of the 27th USENIX Security Symposium"}
 @string{apsys10 = "Proceedings of the 2010 Asia-Pacific Workshop on Systems (APSys)"}
 @string{apsys11 = "Proceedings of the 2011 Asia-Pacific Workshop on Systems (APSys)"}
 @string{apsys12 = "Proceedings of the 2012 Asia-Pacific Workshop on Systems (APSys)"}
@@ -1334,6 +1355,13 @@
 @string{apnet19 = "Proceedings of the 3rd Asia-Pacific Workshop on Networking (APNet)"}
 @string{apnet20 = "Proceedings of the 4th Asia-Pacific Workshop on Networking (APNet)"}
 @string{apnet21 = "Proceedings of the 5th Asia-Pacific Workshop on Networking (APNet)"}
+@string{date12 = "Proceedings of the 2012 Design, Automation, and Test in Europe Conference and Exhibition (DATE)"}
+@string{date13 = "Proceedings of the 2013 Design, Automation, and Test in Europe Conference and Exhibition (DATE)"}
+@string{date14 = "Proceedings of the 2014 Design, Automation, and Test in Europe Conference and Exhibition (DATE)"}
+@string{date15 = "Proceedings of the 2015 Design, Automation, and Test in Europe Conference and Exhibition (DATE)"}
+@string{date16 = "Proceedings of the 2016 Design, Automation, and Test in Europe Conference and Exhibition (DATE)"}
+@string{date17 = "Proceedings of the 2017 Design, Automation, and Test in Europe Conference and Exhibition (DATE)"}
+@string{date18 = "Proceedings of the 2018 Design, Automation, and Test in Europe Conference and Exhibition (DATE)"}
 @string{iwmm92 = "Proceedings of the 1992 International Workshop on Memory Management (IWMM)"}
 @string{iwmm93 = "Proceedings of the 1993 International Workshop on Memory Management (IWMM)"}
 @string{iwmm94 = "Proceedings of the 1994 International Workshop on Memory Management (IWMM)"}
