Update MICRO’s max year.

--- a/gen-abbrev-short.bib
+++ b/gen-abbrev-short.bib
@@ -468,6 +468,29 @@
 @string{micro17 = "MICRO"}
 @string{micro18 = "MICRO"}
 @string{micro19 = "MICRO"}
+@string{micro20 = "MICRO"}
+@string{micro21 = "MICRO"}
+@string{uss98 = "USS"}
+@string{uss99 = "USS"}
+@string{uss00 = "USS"}
+@string{uss01 = "USS"}
+@string{uss02 = "USS"}
+@string{uss03 = "USS"}
+@string{uss04 = "USS"}
+@string{uss05 = "USS"}
+@string{uss06 = "USS"}
+@string{uss07 = "USS"}
+@string{uss08 = "USS"}
+@string{uss09 = "USS"}
+@string{uss10 = "USS"}
+@string{uss11 = "USS"}
+@string{uss12 = "USS"}
+@string{uss13 = "USS"}
+@string{uss14 = "USS"}
+@string{uss15 = "USS"}
+@string{uss16 = "USS"}
+@string{uss17 = "USS"}
+@string{uss18 = "USS"}
 @string{apsys10 = "APSYS"}
 @string{apsys11 = "APSYS"}
 @string{apsys12 = "APSYS"}
@@ -1345,6 +1368,16 @@
 @string{ccs07 = "CCS"}
 @string{ccs08 = "CCS"}
 @string{ccs09 = "CCS"}
+@string{date12 = "DATE"}
+@string{date13 = "DATE"}
+@string{date14 = "DATE"}
+@string{date15 = "DATE"}
+@string{date16 = "DATE"}
+@string{date17 = "DATE"}
+@string{date18 = "DATE"}
+@string{date19 = "DATE"}
+@string{date20 = "DATE"}
+@string{date21 = "DATE"}
 @string{ccs10 = "CCS"}
 @string{ccs11 = "CCS"}
 @string{ccs12 = "CCS"}
