--- a/gen-abbrev.bib
+++ b/gen-abbrev.bib
@@ -468,6 +468,8 @@
 @string{micro17 = "Proceedings of the 50th Annual IEEE/ACM International Symposium on Microarchitecture (MICRO)"}
 @string{micro18 = "Proceedings of the 51st Annual IEEE/ACM International Symposium on Microarchitecture (MICRO)"}
 @string{micro19 = "Proceedings of the 52nd Annual IEEE/ACM International Symposium on Microarchitecture (MICRO)"}
+@string{micro20 = "Proceedings of the 53rd Annual IEEE/ACM International Symposium on Microarchitecture (MICRO)"}
+@string{micro21 = "Proceedings of the 54th Annual IEEE/ACM International Symposium on Microarchitecture (MICRO)"}
 @string{uss98 = "Proceedings of the 7th USENIX Security Symposium"}
 @string{uss99 = "Proceedings of the 8th USENIX Security Symposium"}
 @string{uss00 = "Proceedings of the 9th USENIX Security Symposium"}
